# dummy-problems

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
artificial_neural_network/: ann_custom.ipynb  ann_custom.py  sin_function.ipynb
docker/: Dockerfile  docker-compose.yaml
dummy_problems/dataloaders/: __init__.py  core.py
dummy_problems/models/: __init__.py  core.py  evaluation.py
notebooks/: classifier_benchmark.ipynb  classifier_pets.ipynb  dqn.ipynb  dqn_cartpole.ipynb  lightning.ipynb  sin_function.ipynb  synthetic_data_generation.ipynb
weights/: convnet_10.ckpt  convnet_100.ckpt  convnet_1000.ckpt  svm_10.pkl  svm_100.pkl  tinyvit_10.ckpt  tinyvit_100.ckpt  tinyvit_1000.ckpt
